[package]
name = 'pallet-cf-elections'
version = '0.1.0'
authors = ['Chainflip <https://chainflip.io>']
description = 'FRAME pallet for chainflip witnessing.'
edition = '2021'
homepage = 'https://chainflip.io'
license = 'TBC'
publish = false
repository = 'https://github.com/chainflip-io/chainflip-backend/pallets/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[lints]
workspace = true

[dependencies]

# Internal deps
cf-chains = { path = '../../chains', default-features = false }
cf-traits = { path = '../../traits', default-features = false }
cf-primitives = { path = '../../primitives', default-features = false }

# Local deps


# Non-substrate external deps
bitvec = { default-features = false, version = '1.0', features = ['alloc'] }
itertools = { version = "0.11", default_features = false }

# Parity deps
codec = { package = 'parity-scale-codec', version = '3.6.1', default-features = false, features = [
  'derive',
  'bit-vec',
] }
frame-support = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.6+1", default-features = false }
frame-system = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.6+1", default-features = false }
scale-info = { version = '2.10.0', default-features = false, features = [
  'derive',
] }
sp-core = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.6+1" }
sp-std = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.6+1", default-features = false }

[dev-dependencies]

[features]
default = ['std']
std = [
  'cf-chains/std',
  'cf-traits/std',
  'cf-primitives/std',
  'itertools/use_std',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'scale-info/std',
  'sp-std/std',
]
try-runtime = ['frame-support/try-runtime', 'frame-system/try-runtime']
